--- a/main.html
+++ b/main.html
@@ -1,6 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Container Example</title>
+    <style>
+        /* Your CSS styles for the container go here */
+        .custom-container {
+            background-color: transparent;
+            padding: 0px;
+            border: 0px solid #333;
+            position: fixed;
+            z-index:0;
+            
+        }
+        
+        /* Add more CSS styles for your container if needed */
+    </style>
+</head>
+<body>
+    <!-- Your HTML content goes here -->
+    <div class="custom-container" style="width: 100px; height: 100px;">
+        <!-- Your Matrix digital rain code goes here -->
+        <canvas id="Matrix"></canvas>
+        <script>
+            const canvas = document.getElementById('Matrix');
+            const context = canvas.getContext('2d');
+
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+
+            const katakana = 'アァカサタナハマヤャラワガザダバパイィキシチニヒミリヰギジヂビピウゥクスツヌフムユュルグズブヅプエェケセテネヘメレヱゲゼデベペオォコソトノホモヨョロヲゴゾドボポヴッン';
+            const latin = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+            const nums = '0123456789';
+
+            const alphabet = katakana + latin + nums;
+
+            const fontSize = 16;
+            const columns = canvas.width/fontSize;
+
+            const rainDrops = [];
+
+            for( let x = 0; x < columns; x++ ) {
+                rainDrops[x] = 1;
+            }
+
+            const draw = () => {
+                context.fillStyle = 'rgba(0, 0, 0, 0.05)';
+                context.fillRect(0, 0, canvas.width, canvas.height);
+
+                context.fillStyle = '#2f74d2';
+                context.font = fontSize + 'px monospace';
+
+                for(let i = 0; i < rainDrops.length; i++)
+                {
+                    const text = alphabet.charAt(Math.floor(Math.random() * alphabet.length));
+                    context.fillText(text, i*fontSize, rainDrops[i]*fontSize);
+
+                    if(rainDrops[i]*fontSize > canvas.height && Math.random() > 0.975){
+                        rainDrops[i] = 0;
+                    }
+                    rainDrops[i]++;
+                }
+            };
+
+            setInterval(draw, 30);
+        </script>
+    </div>
+</body>
+</html>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breaking Images</title>
@@ -26,6 +98,7 @@
             width: 50%;
             max-width: 100%;
             height: auto;
+            z-index:999;
         }
 
         .youtube-container {
@@ -66,6 +139,7 @@
             display: flex;
             justify-content: space-between;
             margin-top: -10px;
+            z-index:999;
         }
 
         .png-image-1 {
@@ -73,12 +147,14 @@
             max-width: 100%;
             height: 100%;
             margin: 0 auto;
+            z-index:999;
         }
 
         .png-image-2, .png-image-3 {
             width: 105%;
             max-width: 200%;
             height: auto;
+            z-index:999;
         }
 
         .footer {
