--- a/main.html
+++ b/main.html
@@ -14,11 +14,22 @@
             padding: 0px;
             border: 0px solid #333;
             position: fixed;
-            z-index:0;
-            
+            z-index: 0;
         }
-        
+
         /* Add more CSS styles for your container if needed */
+        @keyframes fadeOut {
+            0% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+            }
+        }
+
+        .fade-out {
+            animation: fadeOut 3s linear forwards;
+        }
     </style>
 </head>
 <body>
@@ -40,11 +51,11 @@
             const alphabet = katakana + latin + nums;
 
             const fontSize = 16;
-            const columns = canvas.width/fontSize;
+            const columns = canvas.width / fontSize;
 
             const rainDrops = [];
 
-            for( let x = 0; x < columns; x++ ) {
+            for (let x = 0; x < columns; x++) {
                 rainDrops[x] = 1;
             }
 
@@ -55,23 +66,29 @@
                 context.fillStyle = '#2f74d2';
                 context.font = fontSize + 'px monospace';
 
-                for(let i = 0; i < rainDrops.length; i++)
-                {
+                for (let i = 0; i < rainDrops.length; i++) {
                     const text = alphabet.charAt(Math.floor(Math.random() * alphabet.length));
-                    context.fillText(text, i*fontSize, rainDrops[i]*fontSize);
+                    context.fillText(text, i * fontSize, rainDrops[i] * fontSize);
 
-                    if(rainDrops[i]*fontSize > canvas.height && Math.random() > 0.975){
+                    if (rainDrops[i] * fontSize > canvas.height && Math.random() > 0.975) {
                         rainDrops[i] = 0;
                     }
                     rainDrops[i]++;
                 }
             };
 
-            setInterval(draw, 30);
+            // Start the animation interval
+            const animationInterval = setInterval(draw, 30);
+
+            // Set a timeout to add the fade-out class after 3 seconds
+            setTimeout(() => {
+                canvas.classList.add('fade-out');
+            }, 3000);
         </script>
     </div>
 </body>
 </html>
+
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -246,13 +263,13 @@
 </head>
 <body>
     <!-- Left GIF -->
-    <img src="https://s10.gifyu.com/images/S4Vhc.gif" alt="Left GIF" class="left-gif">
+    <img src="https://media1.giphy.com/media/rLjK70BL5DlbIJqbeY/giphy.gif" alt="Left GIF" class="left-gif">
     <!-- Right GIF -->
-    <img src="https://s10.gifyu.com/images/S4Vhc.gif" alt="Right GIF" class="right-gif">
+    <img src="https://media1.giphy.com/media/rLjK70BL5DlbIJqbeY/giphy.gif" alt="Right GIF" class="right-gif">
 
     <div class="container">
-        <img src="https://media3.giphy.com/media/qtMUc6sViWwsRwJi69/giphy.gif" alt="Header GIF" class="header">
-        <img src="https://i.imgur.com/5NY9fKQ.png" alt="Resizable PNG Image" class="image">
+        <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExZTByZXNnNnhhOWhoZ3lkNTBzNzNwdGV3YTdlMGF4MGNoZDh5ZGphZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/C5vR7fyscDw5iGew4I/giphy.gif" alt="Header GIF" class="header">
+        <img src="https://i.imgur.com/XcFRby5.png" alt="Resizable PNG Image" class="image">
     </div>
 
     <div class="container">
@@ -269,13 +286,13 @@
 
     <div class="container">
         <div class="png-container">
-            <img src="https://i.imgur.com/HwsT4jO.png" alt="PNG 1" class="png-image-1">
+            <img src="https://i.imgur.com/5nf0rye.png" alt="PNG 1" class="png-image-1">
         </div>
         <div class="png-container">
-            <img src="https://i.imgur.com/2YKp1WE.png" alt="PNG 2" class="png-image-2">
+            <img src="https://i.imgur.com/q53QJJw.png" alt="PNG 2" class="png-image-2">
         </div>
         <div class="png-container">
-            <img src="https://i.imgur.com/dwDEBpt.png" alt="PNG 3" class="png-image-3">
+            <img src="https://i.imgur.com/V68Hqi8.png" alt="PNG 3" class="png-image-3">
         </div>
     </div>
 
@@ -285,7 +302,7 @@
         </div>
         <div class="footer-gifs">
             <img src="https://media.tenor.com/xEr2RjdHTF0AAAAi/zombie.gif" alt="First GIF" class="footer-gif">
-            <img src="https://media.tenor.com/zniT3drVbKcAAAAC/gun.gif" alt="Second GIF" class="footer-gif">
+            <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExanlidnVvNXdtdjR6bW00N2thZTJ4em10Y2ViYmN5eHlsMjVrcTM3aCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/pFwlfzU2UuTQllQGWB/giphy.gif" alt="Second GIF" class="footer-gif">
         </div>
     </div>
 
