--- a/main.html
+++ b/main.html
@@ -116,6 +116,7 @@
             max-width: 100%;
             height: auto;
             z-index:999;
+            
         }
 
         .youtube-container {
@@ -141,6 +142,7 @@
             height: auto;
             position: fixed;
             bottom: 40%;
+            z-index: -1;
         }
 
         .left-gif {
@@ -167,8 +169,10 @@
             z-index:999;
         }
 
-        .png-image-2, .png-image-3 {
-            width: 105%;
+        .png-image-2,
+            
+        .png-image-3 {
+            width: 110%;
             max-width: 200%;
             height: auto;
             z-index:999;
@@ -193,8 +197,9 @@
 
         .footer-link {
             color: white;
-            text-decoration: none;
+            text-decoration: underline;
             margin: 0; /* Reset margin for the link */
+            z-index:1000;
         }
 
         .footer-gif {
@@ -260,12 +265,11 @@
             }
         }
     </style>
-</head>
-<body>
+
     <!-- Left GIF -->
-    <img src="https://media1.giphy.com/media/rLjK70BL5DlbIJqbeY/giphy.gif" alt="Left GIF" class="left-gif">
+    <img src="https://s10.gifyu.com/images/S4Vhc.gif" alt="Left GIF" class="left-gif">
     <!-- Right GIF -->
-    <img src="https://media1.giphy.com/media/rLjK70BL5DlbIJqbeY/giphy.gif" alt="Right GIF" class="right-gif">
+    <img src="https://s10.gifyu.com/images/S4Vhc.gif" alt="Right GIF" class="right-gif">
 
     <div class="container">
         <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExZTByZXNnNnhhOWhoZ3lkNTBzNzNwdGV3YTdlMGF4MGNoZDh5ZGphZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/C5vR7fyscDw5iGew4I/giphy.gif" alt="Header GIF" class="header">
