--- a/main.html
+++ b/main.html
@@ -206,6 +206,7 @@
             width: 100px;
             height: auto;
             margin-right: 10px;
+            z-indes: -1;
         }
     
 
@@ -306,7 +307,7 @@
         </div>
         <div class="footer-gifs">
             <img src="https://media.tenor.com/xEr2RjdHTF0AAAAi/zombie.gif" alt="First GIF" class="footer-gif">
-            <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExanlidnVvNXdtdjR6bW00N2thZTJ4em10Y2ViYmN5eHlsMjVrcTM3aCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/pFwlfzU2UuTQllQGWB/giphy.gif" alt="Second GIF" class="footer-gif">
+            <img src="https://giphy.com/gifs/a9xP9QlTEPdRQTGdVI" alt="Second GIF" class="footer-gif">
         </div>
     </div>
 
