--- a/main.html
+++ b/main.html
@@ -206,7 +206,7 @@
             width: 100px;
             height: auto;
             margin-right: 10px;
-            z-indes: -1;
+            
         }
     
 
@@ -307,7 +307,7 @@
         </div>
         <div class="footer-gifs">
             <img src="https://media.tenor.com/xEr2RjdHTF0AAAAi/zombie.gif" alt="First GIF" class="footer-gif">
-            <img src="https://giphy.com/gifs/a9xP9QlTEPdRQTGdVI" alt="Second GIF" class="footer-gif">
+            <img src="https://media1.giphy.com/media/pFwlfzU2UuTQllQGWB/giphy.gif" alt="Second GIF" class="footer-gif">
         </div>
     </div>
 
