--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Container Example</title>
+    <title>breaking images</title>
     <style>
         /* Your CSS styles for the container go here */
         .custom-container {
