--- a/main.html
+++ b/main.html
@@ -279,13 +279,13 @@
 
     <div class="container">
         <div class="youtube-container">
-            <iframe src="https://www.youtube.com/embed/dKlpKE7x7mY" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/watch?v=9SBnKTBPpME" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 
     <div class="container">
         <div class="youtube-container">
-            <iframe src="https://www.youtube.com/embed/omOCwJyG9Bg?si=3zyMRDFaJZNlQmCX" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/watch?v=B2CpcHIxaOw" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 
