--- a/main.html
+++ b/main.html
@@ -119,7 +119,7 @@
             
         }
 
-        .youtube-container {
+        .-container {
             width: 70%;
             max-width: 100%;
             height: 0;
@@ -285,7 +285,7 @@
 
     <div class="container">
         <div class="youtube-container">
-            <iframe src="https://www.youtube.com/watch?v=B2CpcHIxaOw" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/B2CpcHIxaOw?si=LGoPlFmr_ae11_28" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 
