--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="path/to/your/gif.gif" alt="GIF" width="200">
+        <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHFxcG9oM3FkZm4wNGVrYXRsbXE4cmtrbjA3eXZ6emgyMTE0eng2biZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/x5nkVK0hK7pXaYP5Bb/giphy.gif" alt="GIF" width="200" alt="GIF" width="200">
         <h2>What are you afraid of?</h2>
         <input type="text" placeholder="Answer if you dare..." onkeypress="redirectToMainPage(event)">
     </div>
