--- a/main.html
+++ b/main.html
@@ -17,23 +17,23 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
     }
     #gif-container {
       background: url('https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExcGt5eHZxOHJyMGJiNWJyODg3dXk2bHNtM2dzN3AwNWVzMnluNGczeCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/k4TLvTAd9oz7nd50tN/giphy.gif') no-repeat center center/cover;
+      height: 100%;
       z-index: 10;
       opacity: 1;
       transition: opacity 0.5s ease-out; /* Faster transition */
     }
     #content {
-      background-color: black;
-      color: red;
+      background: url('https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExcGt5eHZxOHJyMGJiNWJyODg3dXk2bHNtM2dzN3AwNWVzMnluNGczeCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/k4TLvTAd9oz7nd50tN/giphy.gif') repeat;
+      color: black;
       z-index: 5;
       display: flex;
       flex-direction: column;
       align-items: center;
-      overflow-y: auto;
-      display: none; /* Initially hidden */
+      overflow-y: auto; /* Enable vertical scrolling */
+      height: calc(100% - 50px); /* Adjust height to leave space for the last line */
       padding-bottom: 50px; /* To add some space at the bottom */
     }
     .section {
@@ -41,34 +41,40 @@
       max-width: 800px;
       text-align: center;
     }
-    .section h1 {
-      font-size: 2em; /* Header font size */
-  
+    .text-container {
+      position: relative;
+      padding: 10px 20px;
+      display: inline-block;
+    }
+    .text-container::before {
+      content: '';
+      position: absolute;
+      top: -10px;
+      left: -10px;
+      right: -10px;
+      bottom: -10px;
+      background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black */
+      border-radius: 50%;
+      filter: blur(15px);
+      z-index: -1;
+    }
+    .text-container h1, .text-container p {
+      position: relative;
+      font-size: 2em;
+      text-shadow: 2px 2px 0px red, -2px -2px 0px red, 2px -2px 0px red, -2px 2px 0px red;
+      margin: 0; /* Remove default margin */
     }
     .section p {
       font-size: 2em; /* Larger subtext font size, twice as big as headers */
-text-decoration: underline; /* Underline style */
+      text-decoration: underline; /* Underline style */
+      text-shadow: 2px 2px 0px red, -2px -2px 0px red, 2px -2px 0px red, -2px 2px 0px red;
+      margin: 0; /* Remove default margin */
     }
     .gif-container {
       margin-bottom: 20px; /* Adjust the space between the GIF and the PNG */
     }
-    .image-space {
-      width: 100%;
-      height: 220px; /* Adjust the height for image spaces */
-      background-color: black; /* Match the background color of the webpage */
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-bottom: 10px; /* Reduced margin */
-    }
-    .image-space img {
-      max-width: 75%; /* Reduce the width to 75% */
-      max-height: 75%; /* Reduce the height to 75% */
-      width: auto; /* Added to maintain aspect ratio */
-      height: auto; /* Added to maintain aspect ratio */
-    }
     .last-section {
-      margin-top: 20px; /* Adjust the space between the last section's header and text */
+      margin-top: auto; /* Adjust the space between the last section's header and text */
     }
     .space {
       height: 40px; /* Four lines of space */
@@ -79,22 +85,25 @@ text-decoration: underline; /* Underline style */
   <div id="gif-container"></div>
   <div id="content">
     <div class="section">
-      <h1>UNDER THE TOMB PLAYING AT SELECT THEATRES NEAR YOU!</h1>
-      <p><strong>DON'T MISS THE MADNESS!</strong></p>
+      <div class="text-container">
+        <h1>UNDER THE TOMB PLAYING AT SELECT THEATRES NEAR YOU!</h1>
+        <p><strong>DON'T MISS THE MADNESS!</strong></p>
+      </div>
     </div>
     <div class="gif-container">
       <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExN3BuM25mdG9oMmh4aWo0ZjZwNW9tcmRkamR4ODNmb2U3aGthNGJxayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/bXEWikAIZIh5E4G18Y/source.gif" alt="GIF"> <!-- Replace with your GIF -->
     </div>
     <div class="space"></div> <!-- Four lines of space -->
-    <div class="image-space">
-      <img src="https://i.imgur.com/K6qT6B0.png" alt="Image 1"> <!-- Replace with your PNG image -->
-    </div>
     <div class="section">
-      <p><strong>GET TICKETS NOW</strong></p>
+      <div class="text-container">
+        <p><strong>GET TICKETS NOW</strong></p>
+      </div>
     </div>
     <div class="section last-section"> <!-- Added last-section class -->
-      <h1>USE YOUR UNIQUE PASSWORD AT ADMISSION OR BE DAMNED!!!</h1>
-      <p>Your Password: CUM</p>
+      <div class="text-container">
+        <h1>USE YOUR UNIQUE PASSWORD AT ADMISSION OR BE DAMNED!!!</h1>
+        <p>Your Password: CUM</p>
+      </div>
     </div>
   </div>
 
